[tool.poetry]
name = "qdamono-server"
version = "2.0.0-alpha.1"
description = ""
authors = [
    "Marcin Białek <bialy.cinek@gmail.com>",
    "Krzysztof Grajda <krzysztof.grajda@protonmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
typer = {extras = ["all"], version = "^0.7.0"}
python-socketio = "^5.8.0"
beanie = "^1.17.0"
fastapi-users = {extras = ["beanie"], version = "^10.4.1"}
password-strength = "^0.0.3"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
mongomock = "^4.1.2"
mongomock-motor = "^0.0.18"
pytest-asyncio = "^0.21.0"
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "qdamono_server.runner:cli"